# ledger-babylon-app

./: .clang-format  .gitignore  DEVELOPMENT.md  Makefile  README.md  release_build.sh  requirements.txt
.github/workflows/: build_and_functional_tests.yml  builder-image-workflow.yml  ci-workflow.yml  codeql-workflow.yml  guidelines-enforcer.yml  lint-workflow.yml  unit-test.yml
doc/: coinspect.md
installer/: .gitignore  README.md  babyloninst-test.spec  babyloninst.py  babyloninst.spec  make_installer.sh  pyproject.toml  version.txt
installer/apdu/: flex.apdu  nano_sp.apdu  stax.apdu
installer/apdu-test/: flex.apdu  nano_sp.apdu  stax.apdu
src/: constants.h  main.c
src/boilerplate/: dispatcher.c
src/common/: script.c  segwit_addr.c  segwit_addr.h  wallet.c
src/handler/: get_wallet_address.c  register_wallet.c  sign_message.c  sign_psbt.c  sign_psbt.h
src/handler/lib/: get_merkle_leaf_element.c  get_merkle_leaf_hash.c  get_merkle_preimage.c  get_merkleized_map_value.c  policy.c  policy.h
src/handler/sign_psbt/: compare_wallet_script_at_path.c  sign_psbt_cache.h
src/swap/: handle_swap_sign_transaction.c
src/ui/: display.c  display.h  display_bagl.c  display_nbgl.c  menu_bagl.c  menu_nbgl.c
test_0/: test_get_wallet_address_v1.py  test_register_wallet_v1.py
tests/: bitcoin.conf  conftest.py  instructions.py  test_babylon_gov_mainnet.py  test_babylon_sign_staking.py  test_descriptor.py  test_sign_message.py_
tests/tools/: leafhash.py  tpub.py
unit-tests/: CMakeLists.txt
