[project]
name = "babyloninst"
version = "0.1.0"
description = ""
authors = [
    {name = "Tomo Wallet Team",email = "connect@tomo.inc"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ledgerblue (>=0.1.54,<0.2.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "pyinstaller (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
